@@ -3,6 +3,7 @@ Hash: SHA1
 
 AUX 6.1.3-clipper-mmdbold-ggc-4.3.patch 656 RMD160 6b302779b48217a14f5ac9110bc307db3a3b51eb SHA1 f5813d6769fa9dc11605425cdbda85691d3016bc SHA256 982eff0336a6dfaf4e280d51a59cf722fc063ca89d15ca0af46ce83727fb9a8a
 AUX 6.1.3-clipper-template.patch 2619 RMD160 a3a4998365c4e516325cf95472e8493729ee4b46 SHA1 f3d92469ac5ec4483818abbf50c32ac9b05a622c SHA256 a185a93f76c23ce06256866cfaf0e9854a5702b95a1e49e4d3a5f732e0d1e2a3
+AUX 6.1.3-dont-build-balbes.patch 489 RMD160 7ee9ad48afcd6dd261277321be681bb41ce73fbb SHA1 56f045d3ec8dbf4e0c83dc9df2ac478bd4c5268c SHA256 dfe1b810fb07bf536528b9c955e3162dc470a803513ae6fa69848ed6d64503c4
 AUX 6.1.3-dont-build-double-and-make-bindir.patch 688 RMD160 f5f93cbec122ce81a1ddb1cf57a852d51fa5e5d6 SHA1 4c924554c5c1991ed691fe3474eeffbd108493a9 SHA256 037a3d9042c784c895083fe5348ed3bde74620c1b6b3b2cd4eea53bdbfe77d53
 AUX 6.1.3-dont-build-imosflm.patch 365 RMD160 3f8d5354a2469cc38ef16e98d726eeea7be08ef9 SHA1 47d52b554c594b00ea8e6f84768548879b02a36e SHA256 d57b800c78a1624c665771add717b8b94169d5a5432c5201efa7d9a2cfa62277
 AUX 6.1.3-dont-build-libs.patch 1301 RMD160 d2ff06881f21d152fce3397b84b5355177081ab0 SHA1 8f24f4b786c406993b9b52102ee49caf97672368 SHA256 013bd2a17d7f146d896f0923564a5078ef84b3cea507b58eccd1a43e62a2cdc5
@@ -20,12 +21,13 @@ AUX 6.1.3-setup.patch 12338 RMD160 2107d599dfe477863710d6b8098b3ca43b8cd22d SHA1
 DIST 6.1.3-oasis4.0.patch.bz2 946 RMD160 b448376114ba41e6999d533929fdb79812476f87 SHA1 7667aca14d28cec01bfa7d2eee9cbce11624f4fa SHA256 12d7c5965e0c46b0f482514d9083d6be94d65eeb14ba29c17d507d5f9669f84b
 DIST ccp4-6.1.3-core-src.tar.gz 242134076 RMD160 e9b7deb0766fb95d5e8946881f20e086f0896fe9 SHA1 ee5ada892694db5dc9b2d7d2330b4ac694f56580 SHA256 1e529c660e7f390ec0feca9d45caa00a2813d23156c10a2747c427117293c324
 EBUILD ccp4-apps-6.1.3-r1.ebuild 12077 RMD160 a00f39bd4b8b0e6f2b614801abb90495c867c12c SHA1 1442d693038b8da3ccfaf33f11e266f90c54fbe6 SHA256 97039b674609109821d3e994c8edc22c6e4f12934a7ce467522faa1f3d690713
-MISC ChangeLog 1300 RMD160 df68ac5b7366a6667a6623e99fa2d1e597fba46d SHA1 4d876e744f51251c4eeb0699af7423ff2c160574 SHA256 90bf56e95bde1fbf69fab823165ca10161e1deefc13eff7c143d8cd501777ed4
+EBUILD ccp4-apps-6.1.3-r2.ebuild 12003 RMD160 f85795d2265f36d64457d1938a8a846494f78825 SHA1 d32f2c7b075ceb8601fee916bad6d7570fbdb440 SHA256 4b0071e9eb8358ac488053b49cf477908f6219cace2417e67118b3af544e69ca
+MISC ChangeLog 1474 RMD160 415395a71251e229cf172ac15965094092900ec5 SHA1 9bc7090afbecc7aadfbe93d81cf6b1bb9f09ba71 SHA256 242fd96829748bcfd0555cd0050ddd0ee055f77307b8b01fe6b1466505b53262
 MISC metadata.xml 166 RMD160 4452298fd03e7c9395d1182bfe69d60a14144af6 SHA1 cb0b513473c0348f4f6f6cd9a132e4884155fddb SHA256 84c92b49702daf95eace8d2765215cbd8650da4ef776f9f700b5ce3785dec852
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkuIG7MACgkQgAnW8HDreRYa6QCgmU/ZcUTS69NN2qfIXCNJEoE1
-lS0AoITbgA6AHEJ904XwNOhj868/jKnk
-=Uf3o
+iEYEARECAAYFAkuvXMQACgkQgAnW8HDreRa9nQCcDoy+KgAAciO3zDG9xDPROp0y
+NaQAn0LftrAhjU3gBUQOW3PHCoB4ZEmL
+=gqWu
 -----END PGP SIGNATURE-----
