@@ -1,6 +1,10 @@
 # ChangeLog for sci-chemistry/ccp4
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/ccp4/ChangeLog,v 1.20 2010/02/07 10:26:48 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/ccp4/ChangeLog,v 1.21 2010/03/28 13:41:52 jlec Exp $
+
+  28 Mar 2010; Justin Lecher (jlec) <jlec@gentoo.org> ccp4-6.1.3.ebuild,
+  metadata.xml:
+  Changed USE balbes -> balbes and sci-libs/balbes to sci-chemistry/balbes
 
 *ccp4-6.1.3 (07 Feb 2010)
 
